# Vulpes-locis

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  build.sh
buildScripts/: copyResources.txt  directoryLayoutSetup.txt
cmakescripts/: copyResources.txt  directoryLayoutSetup.txt
include/: core.h  filemanager.h  object.h  world.h
include/graphics/: objectConstant.h  renderconfigurator.h  renderengine.h  renderengineconfiguration.h  ubo.h  vertex.h  windowcontroller.h
shaders/: fragment.frag  vertical.vert
src/: CMakeLists.txt  camera.cpp  camera.h  controlls.cpp  controlls.h  core.cpp  core.h  fileLoaders.cpp  fileLoaders.h  filemanager.cpp  main.cpp  object.h  player.cpp  player.h  stringutils.cpp  stringutils.h  typeConverters.cpp  typeConverters.h  userInput.cpp  userInput.h  window.cpp  window.h  world.cpp
src/ECS/: CMakeLists.txt  ECS.cpp  ECS.h  entity.cpp  entity.h
src/ECS/components/: colider.h  mono.h  physic.h  physicsData.h  playerData.h  renderdata.h  transformation.h
src/ECS/entities/: camera.h  player.cpp  player.h
src/ECS/include/: ECS.h
src/ECS/src/: ECS.cpp  entity.cpp  physicsengine.cpp  renderengine.cpp
src/ECS/src/include/systems/: physicsengine.h  renderengine.h
src/ECS/systems/: mono.cpp  mono.h  physics.cpp  physics.h  physicsengine.cpp  physicsengine.h  render.cpp  render.h  renderengine.cpp  renderengine.h
src/FileManager/: CMakeLists.txt  fileLoaders.cpp  fileLoaders.h  filemanager.cpp  filemanager.h
src/RenderEngine/: CMakeLists.txt  configurator.cpp  configurator.h  deviceinfo.h  renderengine.cpp  renderengine.h  renderer.cpp  renderer.h  rendersettings.h  storage.cpp  storage.h
src/RenderEngine/include/: configurator.h  renderer.h  storage.h
src/RenderEngine/include/types/: configuration.h  deviceInfo.h  suportedConfigurations.h
src/RenderEngine/private/: image.cpp  image.h  memory.cpp  memory.h  values.cpp  values.h  vertex.hpp
src/RenderEngine/src/: configurator.cpp  configurator.h  image.cpp  image.h  io.cpp  io.h  memory.cpp  memory.h  objectConstant.h  renderer.cpp  storage.cpp  storage.h  ubo.h  values.cpp  values.h  valuesfactory.cpp  valuesfactory.h  vertex.h
src/RenderEngine/src/include/: values.h  valuesfactory.h
src/RenderEngine/src/include/types/: objectConstant.h
src/RenderEngine/src/types/: vertex.h
src/RenderEngine/types/: configuration.h  drawcall.h
src/Shaders/: fragment.frag  vertical.vert
src/Window/: CMakeLists.txt
src/Window/include/: window.h
src/Window/src/: window.cpp
src/converters/: CMakeLists.txt  objectToMesh.cpp  objectToMesh.h  typeConverters.h
src/entities/: camera.cpp  camera.h  player.cpp  player.h
src/graphics/: CMakeLists.txt  renderconfigurator.cpp  renderengine.cpp  renderengine.h  renderengineconfiguration.cpp  renderengineconfiguration.h  windowcontroller.cpp  windowcontroller.h
src/modules/: CMakeLists.txt
src/modules/ECS/: CMakeLists.txt  ECS.cpp  ECS.h  entity.cpp  entity.h
src/modules/ECS/components/: componentsHeaders.h
src/modules/ECS/systems/: physicsengine.h  renderengine.cpp  renderengine.h  systemsheaders.h
src/modules/FileManager/: CMakeLists.txt
src/modules/FileManager/formaters/: object.cpp  object.h
src/modules/FileManager/formats/: object.h
src/modules/RenderEngine/: CMakeLists.txt  README.md  configurator.cpp  configurator.h  drawcall.h  mesh.h  renderer.cpp  renderer.h  storage.cpp  storage.h
src/modules/RenderEngine/shaders/: vertical.vert
src/modules/RenderEngine/src/: io.cpp  io.h  memory.h  ubo.h  valuesfactory.cpp  valuesfactory.h  vertex.h
src/modules/StringUtils/: CMakeLists.txt  stringutils.cpp  stringutils.h
src/shaders/: CMakeLists.txt  vertical.vert
src/systems/: monoSystem.cpp  monoSystem.h  physicsengine.cpp  physicsengine.h  renderengine.cpp  renderengine.h
src/systems/components/: colider.h  mono.h  physicsData.h  playerData.h  transformation.h
src/types/: mat3x3.cpp  mat3x3.h  object.h  vector3.cpp  vector3.h
src/types/math/: mat3x3.cpp  mat3x3.h  vector2.cpp  vector2.h  vector3.cpp
src/types/objects/: face.h  mesh.h  vertice.h
